Add carNumber field to rideSchema
