# routes/driver/driver.routes.ts
@@ -1,5 +1,5 @@
 import express from "express";
-import { createDriver, driverPrefernce, driverVehicleType, uploadDocumentDetails } from "../../controllers/driver/driver.controllers";
+import { createDriver, deleteDriver, driverPrefernce, driverVehicleType, uploadDocumentDetails } from "../../controllers/driver/driver.controllers";
 import { aadhaarCardValidator, driverPhotoValidator, driverPrefernceValidator, driverVehicleTypeValidator, drivingLicenceValidator, insuranceValidator, panCardValidator, vehiclePermitValidator, vehicleRegistrationValidator } from "../../validators/driver/driver.validators";
 import { validate } from "../../validators/validate";
 import { driverApiAuthorization } from "../../middlewares/driverApiAuthorizaion";
@@ -20,6 +20,7 @@ driverRoutes.post("/document/insurance", driverApiAuthorization, upload.single('
 driverRoutes.post("/document/vehicleRegistration", driverApiAuthorization, upload.single('file'), vehicleRegistrationValidator(), validate, uploadDocumentDetails);
 
 
-driverRoutes.get("/createDriver",  createDriver);
+driverRoutes.post("/createDriver",  createDriver);
+driverRoutes.delete("/deleteDriver",  deleteDriver);
 
 export { driverRoutes }
